php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #67764 fpm: syslog.ident don't work (truncated ?)
Submitted: 2014-08-05 11:21 UTC Modified: 2016-12-31 18:08 UTC
Votes:54
Avg. Score:4.2 ± 0.9
Reproduced:51 of 51 (100.0%)
Same Version:7 (13.7%)
Same OS:36 (70.6%)
From: herve dot commowick at fotolia dot com Assigned:
Status: Closed Package: FPM related
PHP Version: 5.5.15 OS: Linux
Private report: No CVE-ID: None
 [2014-08-05 11:21 UTC] herve dot commowick at fotolia dot com
Description:
------------
If i curl the test script, 
I got :
Aug  5 13:07:36 webserver ool www[16869]: test

syslog.ident is don't used or truncated ?

others people have same problem :
http://forums.famillecollet.com/viewtopic.php?id=2861
http://www.gomiworld.net/php-syslog-not-quite-right (at the end of the article)

looks like an old bug.

Test script:
---------------
test.php :
<?php
syslog(LOG_INFO, "test")
?>
php-fpm.conf :
error_log = syslog
syslog.facility = local6
syslog.ident = fpm


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2016-02-03 22:11 UTC] iprok at kinetiksoft dot com
1,5 years passed from the bug being reported. And we still have this bug in php 5.6.

And by the way, according to http://www.ietf.org/rfc/rfc3164 (4.1.3) we can't have spaces in syslog tagname: so there right one not "pool www[16869]:" but something like "pool-www[16869]:". Current situation breaks filtering using syslogtag in the syslog daemons, rsyslog for example.
 [2016-12-31 18:08 UTC] cmb@php.net
-Package: *General Issues +Package: FPM related
 [2017-01-20 12:42 UTC] lameventanas at gmail dot com
The problem is still there with php 7.1.0.

I had to implement a workaround by using syslog-ng rewrite statements.
 [2017-06-28 15:12 UTC] anikiforidis at simplon dot co
I confirm this problem still exists in php-fpm 7.0.18-0ubuntu0.16.04.1
 [2022-06-19 19:12 UTC] git@php.net
Automatic comment on behalf of bukka
Revision: https://github.com/php/php-src/commit/e330f443c937c7f45cf9492ddbe0121f88789123
Log: Fix bug #67764: fpm: syslog.ident does not work
 [2022-06-19 19:12 UTC] git@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 00:00:01 2026 UTC