Fix bug #67764: fpm: syslog.ident does not work